@@ -2,11 +2,12 @@ Changelog for BannerX.
 
 0.3.0 pl (13.09.2012)
 - Added text field "description" for Ads.
-- Ui improvements. Now you can view all Ads of Position in popup window and add/remove/sort them.
+- UI improvements. Now you can view all Ads of Position in popup window and add/remove/sort them.
 - Added drag-n-drop sorting feature for Ads in Position for specifying exact order of displaying.
 - Added properties for snippet BannerX and new sortby - "idx".
 - Added quick enable\disable ads in context menu.
-
+- Added filter by position in ads grid
+- Added search in ads and positions grids
 
 0.2.2 pl (06.09.2012)
 =============
